Fix dark mode

--- a/css/dark.css
+++ b/css/dark.css
@@ -6,7 +6,8 @@
   h5,
   h6,
   p,
-  small {
+  small,
+  label {
     color: white;
   }
 
